--- a/bsdkm/include.am
+++ b/bsdkm/include.am
@@ -2,8 +2,10 @@
 # included from Top Level Makefile.am
 # All paths should be given relative to the root
 
-EXTRA_DIST += m4/ax_bsdkm.m4 \
-	      bsdkm/Makefile \
-	      bsdkm/README.md \
-	      bsdkm/wolfkmod.c \
+EXTRA_DIST += m4/ax_bsdkm.m4       \
+	      bsdkm/Makefile       \
+	      bsdkm/README.md      \
+	      bsdkm/wolfkmod.c     \
+	      bsdkm/wolfkmod_aes.c \
+	      bsdkm/x86_vecreg.c   \
 	      bsdkm/bsdkm_wc_port.h
