Rust wrapper: add FIPS support

--- a/wrapper/rust/Makefile
+++ b/wrapper/rust/Makefile
@@ -6,6 +6,10 @@ all:
 test:
 	+$(MAKE) -C wolfssl-wolfcrypt test
 
+.PHONY: testfips
+testfips:
+	+$(MAKE) -C wolfssl-wolfcrypt testfips
+
 .PHONY: clean
 clean:
 	+$(MAKE) -C wolfssl-wolfcrypt clean
