--- a/wrapper/rust/wolfssl-wolfcrypt/Makefile
+++ b/wrapper/rust/wolfssl-wolfcrypt/Makefile
@@ -6,7 +6,11 @@ all:
 
 .PHONY: test
 test:
-	cargo test
+	cargo test -- --test-threads=1
+
+.PHONY: testfips
+testfips:
+	cargo test --lib --bins --tests -- --test-threads=1
 
 .PHONY: clean
 clean:
