--- a/.github/workflows/async-examples.yml
+++ b/.github/workflows/async-examples.yml
@@ -76,10 +76,13 @@ jobs:
           run_pair ecc_tls12              --tls12 --ecc
           run_pair x25519_tls12           --tls12 --x25519
 
-          # BELOW ARE NOT WORKING YET
           # TLS 1.3 mutual auth
-          #run_pair ecc_tls13_mutual       --mutual --ecc
-          #run_pair x25519_tls13_mutual    --mutual --x25519
+          run_pair ecc_tls13_mutual       --mutual --ecc
+          run_pair x25519_tls13_mutual    --mutual --x25519
+
+          # TLS 1.2 mutual auth
+          run_pair ecc_tls12_mutual       --mutual --tls12 --ecc
+          run_pair x25519_tls12_mutual    --mutual --tls12 --x25519
 
 
       - name: Print async logs
