Add tests for async with static memory. Fix issue with mixed-declaration in SP ECC non-blocking.

--- a/examples/async/Makefile
+++ b/examples/async/Makefile
@@ -14,6 +14,7 @@ CFLAGS += -Wall -Wextra -Wpedantic -Werror
 CFLAGS += -DWOLFSSL_USER_SETTINGS
 CFLAGS += -DHAVE_SYS_TIME_H
 CFLAGS += -DUSE_CERT_BUFFERS_256
+CFLAGS += $(EXTRA_CFLAGS)
 
 LDFLAGS ?=
 LDLIBS ?=
