--- a/.github/workflows/async-examples.yml
+++ b/.github/workflows/async-examples.yml
@@ -15,6 +15,14 @@ jobs:
     if: github.repository_owner == 'wolfssl'
     runs-on: ubuntu-24.04
     timeout-minutes: 10
+    strategy:
+      fail-fast: false
+      matrix:
+        extra_cflags:
+          - ''
+          - '-DWOLFSSL_SMALL_CERT_VERIFY'
+          - '-DWOLFSSL_STATIC_MEMORY'
+    name: Async Examples (${{ matrix.extra_cflags || 'default' }})
     steps:
       - uses: actions/checkout@v4
         name: Checkout wolfSSL
@@ -22,7 +30,7 @@ jobs:
       - name: Build async examples (no configure)
         run: |
           make -C examples/async clean
-          make -C examples/async
+          make -C examples/async EXTRA_CFLAGS="${{ matrix.extra_cflags }}"
 
       - name: Run async examples
         run: |
