--- a/zephyr/samples/wolfssl_tls_sock/CMakeLists.txt
+++ b/zephyr/samples/wolfssl_tls_sock/CMakeLists.txt
@@ -9,12 +9,14 @@ if(EXISTS $ENV{ZEPHYR_BASE}/VERSION)
     set(ZEPHYR_VER_MINOR ${CMAKE_MATCH_1})
 endif()
 
-if(ZEPHYR_VER_MAJOR GREATER_EQUAL 5)
-    set(EXTRA_CONF_FILE ${CMAKE_CURRENT_SOURCE_DIR}/zephyr_v4.1.conf)
-elseif(ZEPHYR_VER_MAJOR EQUAL 4 AND ZEPHYR_VER_MINOR GREATER_EQUAL 1)
-    set(EXTRA_CONF_FILE ${CMAKE_CURRENT_SOURCE_DIR}/zephyr_v4.1.conf)
+if(ZEPHYR_VER_MAJOR GREATER_EQUAL 4 OR
+   (ZEPHYR_VER_MAJOR EQUAL 3 AND
+    ZEPHYR_VER_MINOR GREATER 5))
+    set(EXTRA_CONF_FILE
+        ${CMAKE_CURRENT_SOURCE_DIR}/zephyr_v4.1.conf)
 else()
-    set(EXTRA_CONF_FILE ${CMAKE_CURRENT_SOURCE_DIR}/zephyr_legacy.conf)
+    set(EXTRA_CONF_FILE
+        ${CMAKE_CURRENT_SOURCE_DIR}/zephyr_legacy.conf)
 endif()
 
 include($ENV{ZEPHYR_BASE}/cmake/app/boilerplate.cmake NO_POLICY_SCOPE)
