--- a/linuxkm/include.am
+++ b/linuxkm/include.am
@@ -7,10 +7,13 @@ EXTRA_DIST += m4/ax_linuxkm.m4 \
 	      linuxkm/Makefile \
 	      linuxkm/README.md \
 	      linuxkm/get_thread_size.c \
+	      linuxkm/linuxkm-fips-hash.c \
+	      linuxkm/linuxkm-fips-hash-wrapper.sh \
 	      linuxkm/module_hooks.c \
 	      linuxkm/module_exports.c.template \
 	      linuxkm/pie_redirect_table.c \
 	      linuxkm/linuxkm_memory.c \
+	      linuxkm/linuxkm_memory.h \
 	      linuxkm/linuxkm_wc_port.h \
 	      linuxkm/x86_vector_register_glue.c \
 	      linuxkm/lkcapi_glue.c \
